avoid using deprecated Class.newInstance() method (from Java9).